Included media query for responsive overlay and fix small gap between the navbar and home

--- a/main.css
+++ b/main.css
@@ -55,6 +55,12 @@ body {
    position: relative;
  }
 
+ @media screen and (max-width: 576px) {
+  .under-nav {
+    height: 59px;
+  }
+ }
+
  .fullscreen-video-wrap {
   position: absolute;
   top:0;
